--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build:
   image: gradle:5.0-jdk8-alpine
   stage: build
   script:
-    - gradle build
+    - gradle build --info
   artifacts:
     paths:
       - build/libs/*.jar
