--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,13 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	// https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa
+	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.3.0.RELEASE'
+	// https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api
+	compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+	// https://mvnrepository.com/artifact/org.hibernate/hibernate-gradle-plugin
+	compile group: 'org.hibernate', name: 'hibernate-gradle-plugin', version: '5.4.11.Final'
+
 }
 
 test {
