--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/ccdb
 spring.datasource.username=postgres
-spring.datasource.password=C@mpU5CuP4ssw0rd
+spring.datasource.password=C@mpU5CuP4ssw0rd!
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
