--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,6 @@ services:
 
 stages:
   - build
-  - package
   - deploy
 
 build:
@@ -17,23 +16,12 @@ build:
     paths:
       - build/libs/*.jar
 
-package:
-  stage: package
-  script:
-    - docker build -t registry.gitlab.com/mathflake/api .
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
-    - docker push registry.gitlab.com/mathflake/api
-
 deploy_staging:
   stage: deploy
   script:
-    - apk upgrade && apk update
-    - apk add openssh-client
-    - apk add sshpass
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
-    - docker pull registry.gitlab.com/mathflake/api
-    - docker container stop mathflake_api && docker container rm mathflake_api || true
-    - docker run --net=host --name mathflake_api -p 80:80 -d registry.gitlab.com/mathflake/api
+    - docker build -t ccrest
+    - docker container stop ccrest || true
+    - docker run --net=host --name ccrest -d ccrest
   environment:
     name: staging
     url: https://mathflake.com
