--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ deploy_staging:
   stage: deploy
   script:
     - ls
+    - pwd
     - docker build -t ccrest config.dockerfile
     - docker container stop ccrest || true
     - docker run --net=host --name ccrest -d ccrest
