--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,8 @@ deploy_staging:
   script:
     - ls
     - pwd
+    - whoami
+    - ifconfig
     - systemctl status docker
     - docker build -t ccrest -f config.dockerfile .
     - docker container stop ccrest || true
