trying to copy built files to outside ofg the building docker container

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ build:
   script:
     - whoami
     - gradle build --info
+    - whoami
     - cp build/libs/*jar /home/ccdocker
   artifacts:
     paths:
