trying to copy built files to outside ofg the building docker container

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,9 @@ build:
   script:
     - whoami
     - gradle build --info
+    - whoami
     - pwd
+    - cp build/libs/*jar /host
   artifacts:
     paths:
       - build/libs/*.jar
