--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,6 @@ deploy_staging:
     - pwd
     - whoami
     - ifconfig
-    - sshpass -p "$STAGING_SERVER_PASSWORD" ssh -o StrictHostKeyChecking=no $STAGING_SERVER_USER@$STAGING_SERVER docker build -t ccrest -f config.dockerfile .
-    - docker container stop ccrest || true
-    - docker run --net=host --name ccrest -d ccrest
+    - sshpass -p "$STAGING_SERVER_PASSWORD" ssh -o StrictHostKeyChecking=no $STAGING_SERVER_USER@$STAGING_SERVER pwd
   only:
     - master
