try to get ssh connection to dind host for deployment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,9 @@ build:
 deploy_staging:
   stage: deploy
   script:
+    - apk upgrade && apk update
+    - apk add openssh-client
+    - apk add sshpass
     - ls
     - pwd
     - whoami
