trying to fix naming during copying from inside dind container to outside so a docker container can be created for running the built application.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ build:
     - gradle build --info
     - whoami
     - pwd
-    - cp build/libs/*jar /host
+    - cp build/libs/*jar /host/app.jar
   artifacts:
     paths:
       - build/libs/*.jar
