forgot copying the Dockerfile to the host machine which is why last few build failed.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ build:
     - whoami
     - pwd
     - cp build/libs/*jar /host/app.jar
+    - cp Dockerfile /host/Dockerfile
   artifacts:
     paths:
       - build/libs/*.jar
